--- a/.gitignore
+++ b/.gitignore
@@ -256,6 +256,16 @@ paket-files/
 # CodeRush
 .cr/
 
+# Cmake
+CMakeFiles/
+*.cmake
+CMakeCache.txt
+
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+*.filters
+*.vcxproj
+*.sln
+*.vcxproj
+*.filters
