--- a/ZodiacApplication/ZodiacApplication.vcxproj.filters
+++ b/ZodiacApplication/ZodiacApplication.vcxproj.filters
@@ -1,22 +1,87 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="SandboxApp.cpp">
+    <ClCompile Include="E:\Repos\VulkanEngineProject\ZodiacApplication\SandboxApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Application.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Clock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\EntryPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Initializers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Material.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\QueueFamilyIndices.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Settings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\System.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Validation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Vertex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\VulkanBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\VulkanConfiguration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\VulkanDevice.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\VulkanInstance.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\VulkanPhysicalDevice.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Zodiac.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="E:\Repos\VulkanEngineProject\ZodiacApplication\Dependencies\Zodiac\include\Zodiac\Zodiacpch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="E:\Repos\VulkanEngineProject\ZodiacApplication\CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{A6C2281D-FD41-309E-9F86-B68E9E9728B9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{D47B1223-B925-3E5E-A662-ED9811407C03}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
