Building in separate folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_subdirectory(ZodiacEngine)
 add_subdirectory(ZodiacApplication)
 
+target_compile_definitions(${PROJECT_NAME}
+	PRIVATE
+		SHADERS_DIR="$<TARGET_FILE_DIR:${PROJECT_NAME}>/Shaders"
+)
+
 foreach(util_target IN ITEMS ALL_BUILD INSTALL PACKAGE RUN_TESTS)
 	if(TARGET ${util_target})
 		set_target_properties(${util_target} PROPERTIES FOLDER "CMakeGeneratedTargets")
