--- a/ZodiacEngine/CMakeLists.txt
+++ b/ZodiacEngine/CMakeLists.txt
@@ -81,6 +81,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE ImGui)
 
 # Post-build, copy shaders and resources
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-	COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/shaders" "$<TARGET_FILE_DIR:${PROJECT_NAME}>/shaders"
-	COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/resources" "$<TARGET_FILE_DIR:${PROJECT_NAME}>/resources"
+	COMMAND ${CMAKE_COMMAND} -E copy_directory
+		"${CMAKE_SOURCE_DIR}/ZodiacEngine/Shaders"
+		"$<TARGET_FILE_DIR:${PROJECT_NAME}>/Shaders"
+	COMMAND ${CMAKE_COMMAND} -E copy_directory
+		"${CMAKE_SOURCE_DIR}/ZodiacEngine/Resources"
+		"$<TARGET_FILE_DIR:${PROJECT_NAME}>/Resources"
 )
